--- a/css/components/sections/hero-section/hero-section.css
+++ b/css/components/sections/hero-section/hero-section.css
@@ -8,23 +8,26 @@
   background: linear-gradient(139.73deg, #e6fdff 0%, #f3efff 100%);
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 .hero-section__carousel-container {
   display: flex;
-  max-width: 1200px;
   padding: 0 24px;
+  max-width: 1200px;
   justify-content: center;
   margin-bottom: 31px;
   width: 100%;
 }
 .hero-section__cta {
   max-width: 1200px;
-  padding: 0px 24px 48px 24px;
+  padding: 0 24px;
+  padding-bottom: 48px;
   display: flex;
-  align-items: center;
 }
 .hero-section__left {
-  max-width: 50%;
+  flex: 1 1 0%;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 .hero-section__left h1 {
@@ -59,6 +62,7 @@
   background-color: #1fc7d4;
   box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
   letter-spacing: 0.03em;
+  line-height: 1;
 }
 .hero-section__buttons a {
   display: flex;
@@ -75,12 +79,13 @@
   border: 2px solid #1fc7d4;
   letter-spacing: 0.03em;
   text-decoration: none;
+  line-height: 1;
+  text-align: center;
 }
 .hero-section__right {
-  max-width: 50%;
-}
-.hero-section__images-container {
   position: relative;
+  display: flex;
+  flex: 1 1 0%;
 }
 .hero-section__main-image {
   position: relative;
@@ -90,31 +95,46 @@
   max-width: 100%;
   display: block;
 }
-.hero-section__star-left-image {
+.hero-section__absolute-container {
   position: absolute;
   top: 0;
+  left: 0;
+}
+.hero-section__relative-container {
+  position: relative;
+}
+.hero-section__relative-container img {
+  max-width: 100%;
+  max-height: 512px;
+  display: block;
+}
+.hero-section__star-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.hero-section__star-image--left {
   animation: starTransparent 2s ease-in-out 1s infinite normal none running;
 }
-.hero-section__star-left-image img {
-  max-width: 512px;
+.hero-section__star-image--left img {
+  max-width: 100%;
+  max-height: 512px;
   display: block;
 }
-.hero-section__star-right-image {
-  position: absolute;
-  top: 0;
+.hero-section__star-image--right {
   animation: starTransparent 5s ease-in-out 0.66s infinite normal none running;
 }
-.hero-section__star-right-image img {
-  max-width: 512px;
+.hero-section__star-image--right img {
+  max-width: 100%;
+  max-height: 512px;
   display: block;
 }
-.hero-section__star-top-image {
-  position: absolute;
-  top: 0;
+.hero-section__star-image--top {
   animation: starTransparent 2.5s ease-in-out 0.33s infinite normal none running;
 }
-.hero-section__star-top-image img {
-  max-width: 512px;
+.hero-section__star-image--top img {
+  max-width: 100%;
+  max-height: 512px;
   display: block;
 }
 .hero-section__image-curve--light {
@@ -149,6 +169,41 @@
   }
   100% {
     transform: translate(0px, 0px);
+  }
+}
+@media screen and (max-width: 967px) {
+  .hero-section {
+    padding-top: 105px;
+  }
+  .hero-section__left h1 {
+    font-size: 48px;
+  }
+}
+@media screen and (max-width: 851px) {
+  .hero-section {
+    padding-top: 73px;
+  }
+  .hero-section__cta {
+    flex-direction: column;
+    gap: 24px;
+  }
+  .hero-section__left {
+    order: 2;
+  }
+  .hero-section__right {
+    max-width: 192px;
+    align-self: flex-end;
+  }
+  .hero-section__main-image {
+    max-width: 192px;
+  }
+  .hero-section__relative-container img {
+    max-height: 192px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .hero-section {
+    padding-top: 103px;
   }
 }
 
