--- a/css/components/sections/hero-section/hero-section.scss
+++ b/css/components/sections/hero-section/hero-section.scss
@@ -8,22 +8,25 @@
   background: linear-gradient(139.73deg, #e6fdff 0%, #f3efff 100%);
   position: relative;
   z-index: 1;
+  overflow: hidden;
   &__carousel-container {
     display: flex;
-    max-width: 1200px;
     padding: 0 24px;
+    max-width: 1200px;
     justify-content: center;
     margin-bottom: 31px;
     width: 100%;
   }
   &__cta {
     max-width: 1200px;
-    padding: 0px 24px 48px 24px;
+    padding: 0 24px;
+    padding-bottom: 48px;
     display: flex;
-    align-items: center;
   }
   &__left {
-    max-width: 50%;
+    flex: 1 1 0%;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     h1 {
       font-size: 64px;
@@ -57,6 +60,7 @@
       background-color: #1fc7d4;
       box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
       letter-spacing: 0.03em;
+      line-height: 1;
     }
     a {
       display: flex;
@@ -73,13 +77,14 @@
       border: 2px solid #1fc7d4;
       letter-spacing: 0.03em;
       text-decoration: none;
+      line-height: 1;
+      text-align: center;
     }
   }
   &__right {
-    max-width: 50%;
-  }
-  &__images-container {
     position: relative;
+    display: flex;
+    flex: 1 1 0%;
   }
   &__main-image {
     position: relative;
@@ -89,32 +94,48 @@
       display: block;
     }
   }
-  &__star-left-image {
+  &__absolute-container {
     position: absolute;
     top: 0;
-    animation: starTransparent 2s ease-in-out 1s infinite normal none running;
+    left: 0;
+  }
+  &__relative-container {
+    position: relative;
     img {
-      max-width: 512px;
+      max-width: 100%;
+      max-height: 512px;
       display: block;
     }
   }
-  &__star-right-image {
+  &__star-image {
     position: absolute;
     top: 0;
-    animation: starTransparent 5s ease-in-out 0.66s infinite normal none running;
-    img {
-      max-width: 512px;
-      display: block;
+    left: 0;
+    &--left {
+      animation: starTransparent 2s ease-in-out 1s infinite normal none running;
+      img {
+        max-width: 100%;
+        max-height: 512px;
+        display: block;
+      }
     }
-  }
-  &__star-top-image {
-    position: absolute;
-    top: 0;
-    animation: starTransparent 2.5s ease-in-out 0.33s infinite normal none
-      running;
-    img {
-      max-width: 512px;
-      display: block;
+    &--right {
+      animation: starTransparent 5s ease-in-out 0.66s infinite normal none
+        running;
+      img {
+        max-width: 100%;
+        max-height: 512px;
+        display: block;
+      }
+    }
+    &--top {
+      animation: starTransparent 2.5s ease-in-out 0.33s infinite normal none
+        running;
+      img {
+        max-width: 100%;
+        max-height: 512px;
+        display: block;
+      }
     }
   }
   &__image-curve--light {
@@ -152,5 +173,46 @@
   }
   100% {
     transform: translate(0px, 0px);
+  }
+}
+
+@media screen and (max-width: 967px) {
+  .hero-section {
+    padding-top: calc(49px + 56px);
+    &__left {
+      h1 {
+        font-size: 48px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 851px) {
+  .hero-section {
+    padding-top: calc(17px + 56px);
+    &__cta {
+      flex-direction: column;
+      gap: 24px;
+    }
+    &__left {
+      order: 2;
+    }
+    &__right {
+      max-width: 192px;
+      align-self: flex-end;
+    }
+    &__main-image {
+      max-width: 192px;
+    }
+    &__relative-container {
+      img {
+        max-height: 192px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .hero-section {
+    padding-top: calc(47px + 56px);
   }
 }
