--- a/css/components/shared/carousel/carousel.css
+++ b/css/components/shared/carousel/carousel.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .carousel {
   padding: 20px;
   position: relative;
@@ -9,7 +10,6 @@
   position: relative;
 }
 .carousel__trade {
-  z-index: -2;
   background: linear-gradient(64.41deg, rgba(214, 126, 10, 0.26) 44.37%, rgba(255, 235, 55, 0) 102.8%), radial-gradient(55.22% 134.13% at 57.59% 0%, rgb(245, 223, 142) 0%, rgb(252, 198, 49) 33.21%, rgb(255, 157, 0) 79.02%);
 }
 .carousel__staking {
@@ -17,7 +17,6 @@
 }
 .carousel__v3 {
   background: linear-gradient(239.62deg, rgba(49, 78, 119, 0.35) 15.52%, rgba(60, 46, 87, 0.35) 86.5%), linear-gradient(114.79deg, rgb(192, 64, 252) -17.76%, rgb(75, 60, 255) 99.88%);
-  z-index: -1;
 }
 .carousel__migrate {
   background: linear-gradient(261.24deg, rgba(158, 63, 253, 0.12) 27.61%, rgba(98, 61, 255, 0.25) 76.11%), linear-gradient(247.24deg, rgb(83, 222, 233) -16.43%, rgb(168, 129, 252) 92.15%);
@@ -32,55 +31,80 @@
   display: block;
   width: 100%;
   border-radius: 32px;
+  max-height: max-content;
 }
 .carousel__item {
   display: none;
   position: relative;
 }
+.carousel__bg-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  border-radius: 32px;
+}
 .carousel__bg {
   max-width: 1112px;
-  border-radius: 32px;
   position: absolute;
   overflow: hidden;
-  max-height: 100%;
+  height: 192px;
+  width: 1126px;
+  right: 0px;
 }
 .carousel__bg-image {
-  transform: translateX(-14px);
   display: block;
-  max-width: 1126px;
-  object-position: center;
+  inset: 0px;
+  width: 0px;
+  height: 0px;
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 100%;
+  max-height: 100%;
 }
 .carousel__bg--trade {
-  bottom: 20px;
-  z-index: -1;
+  bottom: 18px;
+  right: 20px;
+  z-index: 0;
 }
 .carousel__bg--trade img {
   max-width: 100%;
   display: block;
 }
-.carousel__bg--staking-coin {
+.carousel__v3-moon {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
+}
+.carousel__v3-moon img {
+  width: 595px;
+  height: 183.91px;
+}
+.carousel__v3-moon img {
+  max-width: 595px;
+  display: block;
+}
+.carousel__staking-coin {
+  position: absolute;
+}
+.carousel__staking-coin--center {
   top: 20px;
   right: 410px;
 }
-.carousel__bg--staking-coin img {
+.carousel__staking-coin--center img {
   max-width: 140px;
   display: block;
 }
-.carousel__bg--staking-coin-right {
+.carousel__staking-coin--right {
+  position: absolute;
+  overflow: hidden;
+  border-bottom-right-radius: 32px;
   bottom: 20px;
   right: 20px;
 }
-.carousel__bg--staking-coin-right img {
+.carousel__staking-coin--right img {
   max-width: 61px;
-  display: block;
-}
-.carousel__bg--v3-moon {
-  top: 20px;
-  right: 20px;
-  z-index: -1;
-}
-.carousel__bg--v3-moon img {
-  max-width: 595px;
   display: block;
 }
 .carousel__animated-image {
@@ -143,7 +167,7 @@
 .carousel__animated-image--v3-flag {
   top: 20px;
   right: 92px;
-  z-index: -2;
+  z-index: 0;
   animation: 5.5s ease-in-out 1.5s infinite normal none running flag;
 }
 .carousel__animated-image--v3-flag img {
@@ -154,6 +178,7 @@
   top: 20px;
   right: 20px;
   animation: 12.5s ease-in-out 0s infinite normal none running coin;
+  z-index: 2;
 }
 .carousel__animated-image--v3-coin img {
   max-width: 204px;
@@ -165,8 +190,10 @@
   max-height: 192px;
   min-height: 181px;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  z-index: 99;
 }
 .carousel__logo-img {
   max-height: 20px;
@@ -178,6 +205,7 @@
 .carousel__logo-img--staking {
   max-height: 29px;
   margin: 0;
+  flex-shrink: 0;
 }
 .carousel__logo-img--staking img {
   max-width: 403px;
@@ -190,6 +218,7 @@
 .carousel__info {
   position: relative;
   width: 100%;
+  height: 100%;
   max-height: 144px;
   padding-top: 40px;
   padding-bottom: 40px;
@@ -222,6 +251,15 @@
   margin: 5px 0;
   line-height: 101%;
 }
+.carousel__staking-text-mobile {
+  display: none;
+  color: rgb(40, 13, 95);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  margin: 5px 0;
+  line-height: 101%;
+}
 .carousel__v3-text {
   display: flex;
   justify-content: center;
@@ -233,6 +271,10 @@
   line-height: 110%;
   margin-top: 10px;
   margin-bottom: 8px;
+  padding-right: 62px;
+}
+.carousel__v3-text svg {
+  flex-shrink: 0;
 }
 .carousel__migrate-text {
   color: white;
@@ -246,9 +288,22 @@
   margin-bottom: 12px;
 }
 .carousel__migrate-text--sm {
+  padding-right: 140px;
   font-size: 21px;
   margin-bottom: 16px;
   text-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
+}
+.carousel__migrate-text--mobile-big {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
+  margin-bottom: 8px;
+  font-size: 23px;
+}
+.carousel__migrate-text--mobile-big svg {
+  flex-shrink: 0;
 }
 .carousel__teams-text {
   color: white;
@@ -306,6 +361,7 @@
 .carousel__gradient-text--staking {
   position: relative;
   font-size: 24px;
+  padding-right: 100px;
   background: linear-gradient(166.02deg, rgb(255, 178, 55) -5.1%, rgb(255, 235, 55) 75.24%);
   filter: unset;
   background-clip: unset;
@@ -318,6 +374,36 @@
 .carousel__gradient-text--staking::after {
   content: "ETH to WBETH conversion and earn ETH staking rewards!";
   position: absolute;
+  padding-right: 100px;
+  top: 0;
+  left: 0;
+  letter-spacing: 0.01em;
+  text-shadow: rgba(0, 0, 0, 0.2) 1.27551px 1.27551px 1.02041px;
+  background: linear-gradient(166.02deg, rgb(255, 178, 55) -5.1%, rgb(255, 235, 55) 75.24%);
+  z-index: -1;
+  background-clip: unset;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 5px rgb(118, 69, 217);
+  -webkit-text-fill-color: transparent;
+}
+.carousel__gradient-text--mobile {
+  display: none;
+  position: relative;
+  font-size: 24px;
+  padding-right: 80px;
+  background: linear-gradient(166.02deg, rgb(255, 178, 55) -5.1%, rgb(255, 235, 55) 75.24%);
+  filter: unset;
+  background-clip: unset;
+  -webkit-background-clip: text;
+  font-feature-settings: "liga" 0;
+  -webkit-text-fill-color: transparent;
+  margin-bottom: 10px;
+  margin-left: 3px;
+}
+.carousel__gradient-text--mobile::after {
+  content: "Stake ETH Receive WBETH";
+  position: absolute;
+  padding-right: 80px;
   top: 0;
   left: 0;
   letter-spacing: 0.01em;
@@ -338,12 +424,14 @@
   -webkit-background-clip: text;
   font-feature-settings: "liga" 0;
   -webkit-text-fill-color: transparent;
+  padding-right: 100px;
   margin: 0;
 }
 .carousel__gradient-text--v3::after {
   content: "Ev3ryone's Favourite D3X";
   position: absolute;
   top: 0;
+  padding-right: 100px;
   left: 0;
   letter-spacing: 0.01em;
   text-shadow: rgba(0, 0, 0, 0.2) 1.27551px 1.27551px 1.02041px;
@@ -367,6 +455,7 @@
 }
 .carousel__links {
   display: flex;
+  position: relative;
   align-items: center;
   gap: 16px;
 }
@@ -524,6 +613,7 @@
 .carousel__bunny-image--v3 {
   right: 173px;
   bottom: -11px;
+  z-index: 2;
 }
 .carousel__bunny-image--v3 img {
   max-width: 221px;
@@ -539,11 +629,11 @@
 }
 .carousel__bunny-image--teams {
   right: 20px;
-  top: 0;
+  bottom: 2px;
 }
 .carousel__bunny-image--teams img {
   max-width: 930px;
-  height: 231px;
+  width: 100%;
   display: block;
 }
 .carousel__bunny-image--perpetual {
@@ -590,6 +680,7 @@
   transform: translateX(-50%);
   width: 108px;
   display: flex;
+  z-index: 999;
 }
 .carousel__button {
   border: none;
@@ -640,6 +731,377 @@
   }
   100% {
     transform: translate(0px, 0px);
+  }
+}
+@media screen and (max-width: 967px) {
+  .carousel__gradient-text--small {
+    display: none;
+  }
+  .carousel__bunny-image--trade {
+    bottom: 20px;
+    right: 20px;
+  }
+  .carousel__bunny-image--trade img {
+    max-width: 145px;
+  }
+  .carousel__bunny-image--staking img {
+    content: url("../../../../assets/images/body-image/liquidStakingBunnyMobile.png");
+    max-width: 159px;
+  }
+  .carousel__bunny-image--migrate {
+    right: 20px;
+  }
+  .carousel__bunny-image--migrate img {
+    content: url("../../../../assets/images/body-image/farmV3MigrationMobileBunny.png");
+    max-width: 200px;
+  }
+  .carousel__bunny-image--teams {
+    bottom: 5px;
+  }
+  .carousel__bunny-image--perpetual {
+    right: 20px;
+  }
+  .carousel__bunny-image--perpetual img {
+    content: url("../../../../assets/images/body-image/perpetualMobile.webp");
+    width: 221px;
+    height: 221px;
+  }
+  .carousel__staking-coin--center img {
+    max-width: 90px;
+  }
+  .carousel__staking-coin--right img {
+    content: url("../../../../assets/images/body-image/liquidStakingBunnyBg2Mobile.png");
+    max-width: 57px;
+  }
+  .carousel__animated-image--top, .carousel__animated-image--bottom, .carousel__bg--trade {
+    display: none;
+  }
+  .carousel__animated-image--right {
+    right: 140px;
+    top: 0;
+  }
+  .carousel__nav {
+    bottom: 45px;
+  }
+}
+@media screen and (max-width: 851px) {
+  .carousel__logo-img--protector {
+    margin: 0;
+    height: 18px;
+    margin-top: -3px;
+    margin-bottom: 1px;
+  }
+  .carousel__logo-img--protector img {
+    max-width: 107px;
+    display: block;
+  }
+  .carousel__info {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .carousel__links--protector {
+    padding: 2px 0;
+  }
+  .carousel__links--protector a {
+    max-height: 20px;
+    padding: 2px 4px 2px 0;
+  }
+  .carousel__links--protector a:last-child {
+    padding: 2px 4px;
+  }
+  .carousel__links--staking a {
+    border-radius: 8px;
+    max-height: 28px;
+  }
+  .carousel__links--staking a:first-child {
+    padding: 2px 4px;
+  }
+  .carousel__links--staking a:last-child {
+    padding: 2px 8px 2px 4px;
+  }
+  .carousel__links--v3 {
+    order: 3;
+  }
+  .carousel__bunny-image--perpetual img {
+    width: 219px;
+    height: 219px;
+  }
+  .carousel__animated-image--staking-star-sm {
+    right: 45px;
+    bottom: 46px;
+    top: unset;
+  }
+  .carousel__animated-image--staking-star-big {
+    display: none;
+  }
+  .carousel__animated-image--v3-eth {
+    display: none;
+  }
+  .carousel__staking-coin--center {
+    right: 120px;
+  }
+  .carousel__gradient-text {
+    margin-bottom: 8px;
+  }
+  .carousel__gradient-text--staking {
+    margin-bottom: 0;
+  }
+  .carousel__gradient-text--v3 {
+    order: 2;
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .carousel__v3-text {
+    order: 1;
+  }
+  .carousel__nav {
+    bottom: 24px;
+  }
+  .carousel__trade-text--big {
+    font-size: 26px;
+    padding-right: 80px;
+  }
+  .carousel__staking-text {
+    font-size: 16px;
+  }
+  .carousel__migrate-text--big {
+    font-size: 26px;
+  }
+  .carousel__teams-text {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .carousel {
+    padding: 0;
+  }
+  .carousel__bg {
+    width: 100%;
+    content: url("../../../../assets/images/body-image/pancakeProtectorBgMobile.png");
+  }
+  .carousel__bunny-image--protector {
+    right: 0;
+    bottom: -9px;
+  }
+  .carousel__bunny-image--protector img {
+    max-width: 132px;
+  }
+  .carousel__bunny-image--trade {
+    bottom: 0;
+    right: 0;
+  }
+  .carousel__bunny-image--staking {
+    bottom: -10px;
+    right: -2.5px;
+    z-index: 1;
+  }
+  .carousel__bunny-image--v3 {
+    right: -25px;
+    top: -20px;
+  }
+  .carousel__bunny-image--v3 img {
+    content: url("../../../../assets/images/body-image/v3LaunchBunnyMobile.png");
+    max-width: 176px;
+  }
+  .carousel__bunny-image--migrate {
+    right: 0;
+    bottom: 0;
+  }
+  .carousel__bunny-image--teams {
+    right: 0;
+    bottom: -8px;
+  }
+  .carousel__bunny-image--teams img {
+    border-bottom-right-radius: 50px;
+  }
+  .carousel__bunny-image--perpetual {
+    right: 0;
+    bottom: 2px;
+  }
+  .carousel__bunny-image--perpetual img {
+    width: 208px;
+    height: 208px;
+  }
+  .carousel__staking-coin--right {
+    bottom: -2px;
+    right: 100px;
+    z-index: 0;
+  }
+  .carousel__staking-coin--center {
+    top: 0;
+  }
+  .carousel__logo-img--staking {
+    max-height: 20px;
+  }
+  .carousel__logo-img--staking img {
+    content: url("../../../../assets/images/body-image/liquidStakingTitleMobile.png");
+    max-width: 212px;
+  }
+  .carousel__animated-image--right {
+    top: -15px;
+    right: 20%;
+  }
+  .carousel__animated-image--right img {
+    max-width: 40px;
+  }
+  .carousel__animated-image--staking-star-sm {
+    right: 25px;
+    bottom: 28px;
+  }
+  .carousel__animated-image--staking-star-big {
+    display: initial;
+    top: 15px;
+    right: 80px;
+  }
+  .carousel__animated-image--v3-coin {
+    display: none;
+  }
+  .carousel__animated-image--v3-flag {
+    display: none;
+  }
+  .carousel__v3-moon {
+    top: unset;
+    bottom: 0;
+    right: 0;
+  }
+  .carousel__v3-moon img {
+    max-width: 232px;
+    content: url("../../../../assets/images/body-image/v3LaunchBgMobile.png");
+  }
+  .carousel__v3-text {
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+  .carousel__trade-text--sm {
+    font-size: 12px;
+  }
+  .carousel__trade-text--big {
+    font-size: 23px;
+    margin-bottom: 8px;
+  }
+  .carousel__staking-text {
+    display: none;
+  }
+  .carousel__staking-text-mobile {
+    display: initial;
+  }
+  .carousel__gradient-text--staking {
+    display: none;
+  }
+  .carousel__gradient-text--mobile {
+    display: initial;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .carousel__gradient-text--perpetual {
+    padding: 0;
+    -webkit-text-stroke: 1px rgba(0, 0, 0, 0.5);
+  }
+  .carousel__teams-text {
+    font-size: 23px;
+    margin-top: 16px;
+  }
+  .carousel__perpetual-text {
+    font-size: 20px;
+    width: 160px;
+    margin-bottom: 8px;
+  }
+  .carousel__links--protector {
+    gap: 4px;
+  }
+  .carousel__links--trade a {
+    max-height: 32px;
+    border-radius: 8px;
+    padding-right: 12px;
+  }
+  .carousel__links--trade a:first-child {
+    padding-right: 12px;
+  }
+  .carousel__links--trade a svg {
+    display: none;
+  }
+  .carousel__links--staking {
+    gap: 4px;
+  }
+  .carousel__links--staking a {
+    max-height: 22px;
+    font-size: 12px;
+    border-radius: 8px;
+    text-transform: uppercase;
+  }
+  .carousel__links--staking a:first-child {
+    padding-right: 8px;
+  }
+  .carousel__links--staking a svg {
+    display: none;
+  }
+  .carousel__links--v3 {
+    margin-top: 10px;
+  }
+  .carousel__links--v3 a {
+    max-height: 32px;
+    padding: 4px 8px;
+  }
+  .carousel__links--migrate a {
+    max-height: 32px;
+    border-radius: 8px;
+  }
+  .carousel__links--migrate a:first-child {
+    padding-right: 12px;
+  }
+  .carousel__links--migrate a:first-child svg {
+    display: none;
+  }
+  .carousel__links--migrate a:first-child::after {
+    content: " 👈";
+  }
+  .carousel__migrate-text--big {
+    display: none;
+  }
+  .carousel__migrate-text--sm {
+    font-size: 12px;
+  }
+  .carousel__migrate-text--sm {
+    padding-right: 100px;
+    margin-bottom: 8px;
+  }
+  .carousel__migrate-text--mobile-big {
+    display: flex;
+  }
+  .carousel__nav {
+    bottom: 12px;
+  }
+}
+@media screen and (max-width: 369px) {
+  .carousel__logo-img--staking {
+    margin-top: -10px;
+  }
+  .carousel__links--trade {
+    flex-flow: column wrap;
+  }
+  .carousel__links--trade a {
+    max-height: 20px;
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 375px) {
+  .carousel__v3-text {
+    margin-top: -20px;
+    font-size: 16px;
+  }
+  .carousel__bunny-image--teams {
+    right: 0;
+    bottom: -4px;
+  }
+}
+@media screen and (max-width: 370px) {
+  .carousel__migrate-text--mobile-big {
+    padding-right: 80px;
+    font-size: 21px;
+    gap: 0;
+    flex-direction: column;
+    align-items: start;
   }
 }
 
