--- a/css/components/shared/carousel/carousel.scss
+++ b/css/components/shared/carousel/carousel.scss
@@ -8,7 +8,6 @@
     position: relative;
   }
   &__trade {
-    z-index: -2;
     background: linear-gradient(
         64.41deg,
         rgba(214, 126, 10, 0.26) 44.37%,
@@ -41,7 +40,6 @@
         rgb(192, 64, 252) -17.76%,
         rgb(75, 60, 255) 99.88%
       );
-    z-index: -1;
   }
   &__migrate {
     background: linear-gradient(
@@ -73,53 +71,78 @@
     display: block;
     width: 100%;
     border-radius: 32px;
+    max-height: max-content;
   }
   &__item {
     display: none;
     position: relative;
   }
+  &__bg-container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    border-radius: 32px;
+  }
   &__bg {
     max-width: 1112px;
-    border-radius: 32px;
     position: absolute;
     overflow: hidden;
-    max-height: 100%;
+    height: 192px;
+    width: 1126px;
+    right: 0px;
     &-image {
-      transform: translateX(-14px);
       display: block;
-      max-width: 1126px;
-      object-position: center;
+      inset: 0px;
+      width: 0px;
+      height: 0px;
+      min-width: 100%;
+      max-width: 100%;
+      min-height: 100%;
+      max-height: 100%;
     }
     &--trade {
-      bottom: 20px;
-      z-index: -1;
+      bottom: 18px;
+      right: 20px;
+      z-index: 0;
       img {
         max-width: 100%;
         display: block;
       }
     }
-    &--staking-coin {
+  }
+  &__v3-moon {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+    img {
+      width: 595px;
+      height: 183.91px;
+    }
+    img {
+      max-width: 595px;
+      display: block;
+    }
+  }
+  &__staking-coin {
+    position: absolute;
+    &--center {
       top: 20px;
       right: 410px;
       img {
         max-width: 140px;
         display: block;
       }
-      &-right {
-        bottom: 20px;
-        right: 20px;
-        img {
-          max-width: 61px;
-          display: block;
-        }
-      }
     }
-    &--v3-moon {
-      top: 20px;
+    &--right {
+      position: absolute;
+      overflow: hidden;
+      border-bottom-right-radius: 32px;
+      bottom: 20px;
       right: 20px;
-      z-index: -1;
       img {
-        max-width: 595px;
+        max-width: 61px;
         display: block;
       }
     }
@@ -185,7 +208,7 @@
     &--v3-flag {
       top: 20px;
       right: 92px;
-      z-index: -2;
+      z-index: 0;
       animation: 5.5s ease-in-out 1.5s infinite normal none running flag;
       img {
         max-width: 150px;
@@ -196,6 +219,7 @@
       top: 20px;
       right: 20px;
       animation: 12.5s ease-in-out 0s infinite normal none running coin;
+      z-index: 2;
       img {
         max-width: 204px;
         display: block;
@@ -208,8 +232,10 @@
     max-height: 192px;
     min-height: 181px;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    z-index: 99;
   }
   &__logo-img {
     max-height: 20px;
@@ -220,6 +246,7 @@
     &--staking {
       max-height: 29px;
       margin: 0;
+      flex-shrink: 0;
       img {
         max-width: 403px;
         display: block;
@@ -233,6 +260,7 @@
   &__info {
     position: relative;
     width: 100%;
+    height: 100%;
     max-height: 144px;
     padding-top: 40px;
     padding-bottom: 40px;
@@ -264,6 +292,15 @@
     font-weight: 600;
     margin: 5px 0;
     line-height: 101%;
+    &-mobile {
+      display: none;
+      color: rgb(40, 13, 95);
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 600;
+      margin: 5px 0;
+      line-height: 101%;
+    }
   }
   &__v3-text {
     display: flex;
@@ -276,6 +313,10 @@
     line-height: 110%;
     margin-top: 10px;
     margin-bottom: 8px;
+    padding-right: 62px;
+    svg {
+      flex-shrink: 0;
+    }
   }
   &__migrate-text {
     color: white;
@@ -288,9 +329,22 @@
       margin-bottom: 12px;
     }
     &--sm {
+      padding-right: 140px;
       font-size: 21px;
       margin-bottom: 16px;
       text-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px;
+    }
+    &--mobile-big {
+      display: none;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 2px;
+      margin-bottom: 8px;
+      font-size: 23px;
+      svg {
+        flex-shrink: 0;
+      }
     }
   }
   &__teams-text {
@@ -360,6 +414,7 @@
     &--staking {
       position: relative;
       font-size: 24px;
+      padding-right: 100px;
       background: linear-gradient(
         166.02deg,
         rgb(255, 178, 55) -5.1%,
@@ -375,6 +430,44 @@
       &::after {
         content: "ETH to WBETH conversion and earn ETH staking rewards!";
         position: absolute;
+        padding-right: 100px;
+        top: 0;
+        left: 0;
+        letter-spacing: 0.01em;
+        text-shadow: rgba(0, 0, 0, 0.2) 1.27551px 1.27551px 1.02041px;
+        background: linear-gradient(
+          166.02deg,
+          rgb(255, 178, 55) -5.1%,
+          rgb(255, 235, 55) 75.24%
+        );
+        z-index: -1;
+        background-clip: unset;
+        -webkit-background-clip: text;
+        -webkit-text-stroke: 5px rgb(118, 69, 217);
+        -webkit-text-fill-color: transparent;
+      }
+    }
+    &--mobile {
+      display: none;
+      position: relative;
+      font-size: 24px;
+      padding-right: 80px;
+      background: linear-gradient(
+        166.02deg,
+        rgb(255, 178, 55) -5.1%,
+        rgb(255, 235, 55) 75.24%
+      );
+      filter: unset;
+      background-clip: unset;
+      -webkit-background-clip: text;
+      font-feature-settings: "liga" 0;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 10px;
+      margin-left: 3px;
+      &::after {
+        content: "Stake ETH Receive WBETH";
+        position: absolute;
+        padding-right: 80px;
         top: 0;
         left: 0;
         letter-spacing: 0.01em;
@@ -404,11 +497,13 @@
       -webkit-background-clip: text;
       font-feature-settings: "liga" 0;
       -webkit-text-fill-color: transparent;
+      padding-right: 100px;
       margin: 0;
       &::after {
         content: "Ev3ryone's Favourite D3X";
         position: absolute;
         top: 0;
+        padding-right: 100px;
         left: 0;
         letter-spacing: 0.01em;
         text-shadow: rgba(0, 0, 0, 0.2) 1.27551px 1.27551px 1.02041px;
@@ -438,6 +533,7 @@
   }
   &__links {
     display: flex;
+    position: relative;
     align-items: center;
     gap: 16px;
     a {
@@ -605,6 +701,7 @@
     &--v3 {
       right: 173px;
       bottom: -11px;
+      z-index: 2;
       img {
         max-width: 221px;
         display: block;
@@ -620,10 +717,10 @@
     }
     &--teams {
       right: 20px;
-      top: 0;
+      bottom: 2px;
       img {
         max-width: 930px;
-        height: 231px;
+        width: 100%;
         display: block;
       }
     }
@@ -673,6 +770,7 @@
     transform: translateX(-50%);
     width: 108px;
     display: flex;
+    z-index: 999;
   }
   &__button {
     border: none;
@@ -726,5 +824,444 @@
   }
   100% {
     transform: translate(0px, 0px);
+  }
+}
+
+@media screen and (max-width: 967px) {
+  .carousel {
+    &__gradient-text--small {
+      display: none;
+    }
+    &__bunny-image {
+      &--trade {
+        bottom: 20px;
+        right: 20px;
+        img {
+          max-width: 145px;
+        }
+      }
+      &--staking {
+        img {
+          content: url("../../../../assets/images/body-image/liquidStakingBunnyMobile.png");
+          max-width: 159px;
+        }
+      }
+      &--migrate {
+        right: 20px;
+        img {
+          content: url("../../../../assets/images/body-image/farmV3MigrationMobileBunny.png");
+          max-width: 200px;
+        }
+      }
+      &--teams {
+        bottom: 5px;
+      }
+      &--perpetual {
+        right: 20px;
+        img {
+          content: url("../../../../assets/images/body-image/perpetualMobile.webp");
+          width: 221px;
+          height: 221px;
+        }
+      }
+    }
+    &__staking-coin {
+      &--center {
+        img {
+          max-width: 90px;
+        }
+      }
+      &--right {
+        img {
+          content: url("../../../../assets/images/body-image/liquidStakingBunnyBg2Mobile.png");
+          max-width: 57px;
+        }
+      }
+    }
+    &__animated-image--top,
+    &__animated-image--bottom,
+    &__bg--trade {
+      display: none;
+    }
+    &__animated-image--right {
+      right: 140px;
+      top: 0;
+    }
+    &__nav {
+      bottom: 45px;
+    }
+  }
+}
+
+@media screen and (max-width: 851px) {
+  .carousel {
+    &__logo-img {
+      &--protector {
+        margin: 0;
+        height: 18px;
+        margin-top: -3px;
+        margin-bottom: 1px;
+        img {
+          max-width: 107px;
+          display: block;
+        }
+      }
+    }
+    &__info {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+    &__links {
+      &--protector {
+        padding: 2px 0;
+        a {
+          max-height: 20px;
+          padding: 2px 4px 2px 0;
+          &:last-child {
+            padding: 2px 4px;
+          }
+        }
+      }
+      &--staking {
+        a {
+          border-radius: 8px;
+          max-height: 28px;
+          &:first-child {
+            padding: 2px 4px;
+          }
+          &:last-child {
+            padding: 2px 8px 2px 4px;
+          }
+        }
+      }
+      &--v3 {
+        order: 3;
+      }
+    }
+    &__bunny-image {
+      &--perpetual {
+        img {
+          width: 219px;
+          height: 219px;
+        }
+      }
+    }
+    &__animated-image {
+      &--staking-star-sm {
+        right: 45px;
+        bottom: 46px;
+        top: unset;
+      }
+      &--staking-star-big {
+        display: none;
+      }
+      &--v3-eth {
+        display: none;
+      }
+    }
+    &__staking-coin--center {
+      right: 120px;
+    }
+    &__gradient-text {
+      margin-bottom: 8px;
+      &--staking {
+        margin-bottom: 0;
+      }
+      &--v3 {
+        order: 2;
+        font-size: 24px;
+        margin-bottom: 10px;
+      }
+    }
+    &__v3-text {
+      order: 1;
+    }
+    &__nav {
+      bottom: 24px;
+    }
+    &__trade-text--big {
+      font-size: 26px;
+      padding-right: 80px;
+    }
+    &__staking-text {
+      font-size: 16px;
+    }
+    &__migrate-text--big {
+      font-size: 26px;
+    }
+    &__teams-text {
+      font-size: 35px;
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .carousel {
+    padding: 0;
+    &__bg {
+      width: 100%;
+      content: url("../../../../assets/images/body-image/pancakeProtectorBgMobile.png");
+    }
+    &__bunny-image {
+      &--protector {
+        right: 0;
+        bottom: -9px;
+        img {
+          max-width: 132px;
+        }
+      }
+      &--trade {
+        bottom: 0;
+        right: 0;
+      }
+      &--staking {
+        bottom: -10px;
+        right: -2.5px;
+        z-index: 1;
+      }
+      &--v3 {
+        right: -25px;
+        top: -20px;
+        img {
+          content: url("../../../../assets/images/body-image/v3LaunchBunnyMobile.png");
+          max-width: 176px;
+        }
+      }
+      &--migrate {
+        right: 0;
+        bottom: 0;
+      }
+      &--teams {
+        right: 0;
+        bottom: -8px;
+        img {
+          border-bottom-right-radius: 50px;
+        }
+      }
+      &--perpetual {
+        right: 0;
+        bottom: 2px;
+        img {
+          width: 208px;
+          height: 208px;
+        }
+      }
+    }
+    &__staking-coin {
+      &--right {
+        bottom: -2px;
+        right: 100px;
+        z-index: 0;
+      }
+      &--center {
+        top: 0;
+      }
+    }
+    &__logo-img {
+      &--staking {
+        max-height: 20px;
+        img {
+          content: url("../../../../assets/images/body-image/liquidStakingTitleMobile.png");
+          max-width: 212px;
+        }
+      }
+    }
+    &__animated-image {
+      &--right {
+        top: -15px;
+        right: 20%;
+        img {
+          max-width: 40px;
+        }
+      }
+      &--staking-star-sm {
+        right: 25px;
+        bottom: 28px;
+      }
+      &--staking-star-big {
+        display: initial;
+        top: 15px;
+        right: 80px;
+      }
+      &--v3-coin {
+        display: none;
+      }
+      &--v3-flag {
+        display: none;
+      }
+    }
+    &__v3-moon {
+      top: unset;
+      bottom: 0;
+      right: 0;
+      img {
+        max-width: 232px;
+        content: url("../../../../assets/images/body-image/v3LaunchBgMobile.png");
+      }
+    }
+    &__v3-text {
+      font-size: 14px;
+      margin-top: 0;
+      margin-bottom: 10px;
+    }
+    &__trade-text {
+      &--sm {
+        font-size: 12px;
+      }
+      &--big {
+        font-size: 23px;
+        margin-bottom: 8px;
+      }
+    }
+    &__staking-text {
+      display: none;
+      &-mobile {
+        display: initial;
+      }
+    }
+    &__gradient-text {
+      &--staking {
+        display: none;
+      }
+      &--mobile {
+        display: initial;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+      &--perpetual {
+        padding: 0;
+        -webkit-text-stroke: 1px rgba(0, 0, 0, 0.5);
+      }
+    }
+    &__teams-text {
+      font-size: 23px;
+      margin-top: 16px;
+    }
+    &__perpetual-text {
+      font-size: 20px;
+      width: 160px;
+      margin-bottom: 8px;
+    }
+    &__links {
+      &--protector {
+        gap: 4px;
+      }
+      &--trade {
+        a {
+          max-height: 32px;
+          border-radius: 8px;
+          padding-right: 12px;
+          &:first-child {
+            padding-right: 12px;
+          }
+          svg {
+            display: none;
+          }
+        }
+      }
+      &--staking {
+        gap: 4px;
+        a {
+          max-height: 22px;
+          font-size: 12px;
+          border-radius: 8px;
+          text-transform: uppercase;
+          &:first-child {
+            padding-right: 8px;
+          }
+          svg {
+            display: none;
+          }
+        }
+      }
+      &--v3 {
+        margin-top: 10px;
+        a {
+          max-height: 32px;
+          padding: 4px 8px;
+        }
+      }
+      &--migrate {
+        a {
+          max-height: 32px;
+          border-radius: 8px;
+          &:first-child {
+            padding-right: 12px;
+            svg {
+              display: none;
+            }
+            &::after {
+              content: " 👈";
+            }
+          }
+        }
+      }
+    }
+    &__migrate-text {
+      &--big {
+        display: none;
+      }
+      &--sm {
+        font-size: 12px;
+      }
+    }
+    &__migrate-text {
+      &--sm {
+        padding-right: 100px;
+        margin-bottom: 8px;
+      }
+      &--mobile-big {
+        display: flex;
+      }
+    }
+    &__nav {
+      bottom: 12px;
+    }
+  }
+}
+
+@media screen and (max-width: 369px) {
+  .carousel {
+    &__logo-img {
+      &--staking {
+        margin-top: -10px;
+      }
+    }
+    &__links {
+      &--trade {
+        flex-flow: column wrap;
+        a {
+          max-height: 20px;
+          font-size: 12px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .carousel {
+    &__v3-text {
+      margin-top: -20px;
+      font-size: 16px;
+    }
+    &__bunny-image {
+      &--teams {
+        right: 0;
+        bottom: -4px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .carousel {
+    &__migrate-text--mobile-big {
+      padding-right: 80px;
+      font-size: 21px;
+      gap: 0;
+      flex-direction: column;
+      align-items: start;
+    }
   }
 }
